# Introsort

./: CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
example/: CMakeLists.txt  example.cpp
include/omoteura/: intro_sort.h
test/: CMakeLists.txt  test.cpp
